Add load addendum
